<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.example.foxmap_native_1.GLMapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wait_placeholder_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.9"
        android:background="@android:color/darker_gray"
        android:scaleType="centerInside"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/telegraph" />

    <SearchView
        android:id="@+id/from_search_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:alpha="1"
        android:background="@drawable/head_text_label_left"
        android:elevation="3dp"
        android:focusedByDefault="false"
        android:hint="From"
        android:iconifiedByDefault="false"
        android:queryHint="From"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/to_search_view"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <SearchView
        android:id="@+id/to_search_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:alpha="1"
        android:background="@android:color/background_light"
        android:elevation="3dp"
        android:focusedByDefault="false"
        android:iconifiedByDefault="false"
        android:queryHint="To"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/from_search_view"
        app:layout_constraintEnd_toStartOf="@+id/reverse_route_button"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@+id/from_search_view"
        app:layout_constraintTop_toTopOf="@+id/from_search_view"
        app:layout_constraintVertical_bias="0.59000003">

    </SearchView>

    <ImageButton
        android:id="@+id/reverse_route_button"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/head_text_label_right"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/to_search_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/to_search_view"
        app:srcCompat="@drawable/reverse" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/storey_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="@android:color/background_light"
        app:borderWidth="5dp"
        app:elevation="7dp"
        app:layout_constraintBottom_toTopOf="@+id/man_icon_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_name_text_view"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="25dp"
        app:srcCompat="@drawable/arrow_up" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/storey_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:backgroundTint="@android:color/background_light"
        app:borderWidth="5dp"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/reverse_route_button"
        app:layout_constraintEnd_toEndOf="@+id/storey_up_button"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/storey_up_button"
        app:layout_constraintTop_toBottomOf="@+id/place_name_text_view"
        app:layout_constraintVertical_bias="0.86"
        app:maxImageSize="25dp"
        app:srcCompat="@drawable/arrow_down" />

    <TextView
        android:id="@+id/place_name_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/head_text_label_right"
        android:elevation="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="Главный корпус"
        app:layout_constraintBottom_toBottomOf="@+id/storey_number_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/storey_number_text_view"
        app:layout_constraintTop_toTopOf="@+id/storey_number_text_view" />

    <TextView
        android:id="@+id/storey_number_text_view"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/head_text_label_left"
        android:elevation="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="3 Этаж"
        app:layout_constraintEnd_toStartOf="@+id/place_name_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/man_icon_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/storey_down_button"
        app:layout_constraintEnd_toEndOf="@+id/storey_up_button"
        app:layout_constraintStart_toStartOf="@+id/storey_up_button"
        app:srcCompat="@drawable/man_on_ladder" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

</android.support.constraint.ConstraintLayout>
