<resources>
    <string name="app_name">FoxMap</string>
    <string name="cannot_update_map">Sorry, it\'s unable to update map</string>
    <string name="success_map_updated">You map is synchronized</string>
    <string name="toast_max_floor_reached">Небо не принимает :(</string>
    <string name="toast_min_floor_reached">Вы на дне</string>
    <string name="storey_number_textview">%d Этаж</string>
    <string name="toast_no_opengl_support">Необходима поддержка OpenGL ES минимум версии 2</string>
    <string name="toast_object_on_map">Ищем %s...</string>
    <string name="toast_path_on_map">Строим маршрут...</string>
    <string name="toast_map_syncronized">Карта обновлена</string>
    <string name="toast_failed_map_update">Невозможно обновить карту</string>
</resources>
